# ml-project-template

./: .env.dev.example  .env.example  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  install.sh  pyproject.toml  requirements.txt
configs/: configs.py
demo/: main.py
demo/app1/: app1-1.py  app1-2.py
demo/app2/: app2-1.py  app2-2.py
notebooks/: template.ipynb
src/flex_ml/utils/: config_loader.py  settings.py
