[project]
name = "flex-ml-project"
version = "1.0.0"
description = "flex ML project template"
requires-python = "==3.12.9"
readme = "README.md"
authors = [
    { name = "KMYU", email = "kwangmyung@flex.team" } # Optional
]
maintainers = [
    { name = "KMYU", email = "kwangmyung@flex.team" } # Optional
]

[build-system]
# Minimum requirements for the build system to execute, according to PEP-508
requires = [
    "build>=0.7",
    "wheel>=0.37,<0.40",
    "setuptools<67.6.1"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 105
target-version = ["py312"]
exclude = ""

[tool.isort]
profile = "black"
skip_gitignore = true
extend_skip_glob = ""

[project.optional-dependencies]
dev = [
    "black >= 23.7.0",
    "isort >= 5.12.0",
    "pre-commit >= 3.3.3",
]